--- a/app/views/layouts/erp_accounts/application.html.erb
+++ b/app/views/layouts/erp_accounts/application.html.erb
@@ -16,6 +16,10 @@
     <%= javascript_importmap_tags %>
   </head>
   <body class="min-h-screen bg-gradient-to-br from-green-50 via-white to-orange-100 flex-1 md:pt-20 transition-all duration-300 ease-in-out">
-    <%= yield %>
+    <%= render ErpCore::Ui::Layout::BaseComponent.new(active: :home, title: @account.name, user_name: current_user.email, avatar: "https://img.lovepik.com/png/20231125/man-avatar-image-for-profile-child-diverse-guy_693690_wh860.png") %>
+    <div class="main-content" data-controller="erp-core--layout">
+      <%= render ErpCore::Ui::FlashMessages::BaseComponent.new(flash: flash, resource: defined?(resource) ? resource : nil) %>
+      <%= yield %>
+    </div>
   </body>
 </html>
