--- a/app/views/layouts/erp_accounts/application.html.erb
+++ b/app/views/layouts/erp_accounts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
   <body class="min-h-screen bg-gradient-to-tl from-gray-300 to-slate-50 flex-1 md:pt-20 transition-all duration-300 ease-in-out">
     <div class="main-content" data-controller="erp-core--layout">
-      <%= render ErpCore::Ui::Layout::BaseComponent.new(active: :overview, title: "Dashboard", user_name: current_user.email, avatar: "https://img.lovepik.com/png/20231125/man-avatar-image-for-profile-child-diverse-guy_693690_wh860.png") %>
+      <%= render ErpCore::Ui::Layout::BaseComponent.new(active: :home, title: @account.name , user_name: current_user.email, avatar: "https://img.lovepik.com/png/20231125/man-avatar-image-for-profile-child-diverse-guy_693690_wh860.png") %>
       <%= render ErpCore::Ui::FlashMessages::BaseComponent.new(flash: flash, resource: defined?(resource) ? resource : nil) %>
       <%= yield %>
     </div>
